--- a/views/partials/heading.ejs
+++ b/views/partials/heading.ejs
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title><%= title %></title>
+	<!-- icons -->
+	<link rel="stylesheet" type="text/css" href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+	<!-- my styles -->
 	<link rel="stylesheet" type="text/css" href="./styles/styles.css">
 </head>
 <body>
