Create login page User cannot login to their account after creating an account. Create an authentication function to verify the user has typed in the correct credentials.  Modify the signup styles to have an appropriate name for the login and sign up page. Create a route for logging out.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,15 +1,13 @@
 <%- include ./partials/heading.ejs %>
 <%- include ./partials/navbar.ejs %>
 <div class="signup-login-page">
-	<h1>Sign Up</h1>
-	<form action="/signup" method="post">
+	<h1>Login</h1>
+	<form action="/login" method="post">
 		<label for="email">Email</label><br>
 		<input class="inputField" type="text" name="email"><br>
 		<label for="password">Password</label><br>
 		<input class="inputField" type="password" name="password"><br>
-		<label for="confirmPassword">Confirm Password</label><br>
-		<input class="inputField" type="password" name="confirmPassword"><br>
-		<input class="inputSubmit" type="submit" value="Submit">
+		<input class="inputSubmit" type="submit" value="Log in">
 	</form>
 </div>
 <%- include ./partials/footer.ejs %>
