--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -43,7 +43,7 @@ nav li a:hover {
 	font-size: 4em;
 }
 /* SIGN UP PAGE ============================================================ */
-.signup-page {
+.signup-login-page {
 	text-align: center;
 	float: left;
 	width: 50%;
@@ -54,33 +54,33 @@ nav li a:hover {
 }
 /* media queries for size of signup section on different devices */
 @media screen and (max-width: 1024px) {
-	.signup-page {
+	.signup-login-page {
 		width: 66%;
 		margin-left: 17%;
 	}
 }
 @media screen and (max-width: 768px) {
-	.signup-page {
+	.signup-login-page {
 		width: 100%;
 		margin-left: 0;
 		border-radius: 0px;
 	}
 }
-.signup-page input {
+.signup-login-page input {
 	margin-bottom: 2.5em;
 }
-.signup-page form label {
+.signup-login-page form label {
 	font-size: 1.3em;
 }
-.signup-page form .inputField {
+.signup-login-page form .inputField {
 	font-size: 1.5em;
 	border: 1px gray solid;
 	border-radius: 5px;
 }
-.signup-page input:focus {
+.signup-login-page input:focus {
 	box-shadow: 0 0 1pt 1pt red;
 }
-.signup-page .inputSubmit {
+.signup-login-page .inputSubmit {
 	color: white;
 	font-size: 1.7em;
 	padding: 10px;
