Create fake data and load data into budget page Budget page currently shows now data.  Create a JSON file with fake data and load it into the budget via jQuery.

--- a/views/budget.ejs
+++ b/views/budget.ejs
@@ -1,4 +1,9 @@
 <%- include ./partials/heading.ejs %>
 <%- include ./partials/navbar.ejs %>
 <h1>Monthly Budget</h1>
+<p id="test" style="text-align: center;"></p>
+
+<!-- Load Javascript and JQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="./JavaScript/budget-data.js"></script>
 <%- include ./partials/footer.ejs %>
