--- a/views/budget.ejs
+++ b/views/budget.ejs
@@ -1,7 +1,25 @@
 <%- include ./partials/heading.ejs %>
 <%- include ./partials/navbar.ejs %>
-<h1>Monthly Budget</h1>
-<p id="test" style="text-align: center;"></p>
+<div class="budget-page">
+	<div class="left-pane">
+		<h2>Overview</h2>
+		<h3>Fixed Costs</h3>
+		<h3>Investments</h3>
+		<h3>Savings</h3>
+		<h3>Spending Money</h3>
+	</div>
+	<div class="center-pane">
+		<h2>Budget</h2>
+		<h3>Fixed Costs</h3>
+		<h3>Investments</h3>
+		<h3>Savings</h3>
+		<h3>Spending Money</h3>
+	</div>
+	<div class="right-pane">
+		<h2>Add Item</h2>
+		<h2>Adjust Income</h2>
+	</div>
+</div>
 
 <!-- Load Javascript and JQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
