Modify structure of budget - left-pane It is currently difficult to target elements on the budget page within the left-pane.  Modify the html id and class attributes to make it easier to target the elements with JavaScript. Make the jQuery work with the new classes/id's.

--- a/views/budget.ejs
+++ b/views/budget.ejs
@@ -5,24 +5,32 @@
 	<div class="left-pane">
 		<h2>Overview</h2>
 		<p id="monthlyIncome"></p>
-		<h3>Fixed Costs</h3>
-		<div id="fixed-bar-container" class="bar-container">
-			<div class="bar-progress">
+		<div id="fixed-costs-overview">
+			<h3>Fixed Costs</h3>
+			<div class="bar-container">
+				<div class="bar-progress">
+				</div>
 			</div>
 		</div>
-		<h3>Investments</h3>
-		<div id="investment-bar-container" class="bar-container">
-			<div class="bar-progress">
+		<div id="investment-overview">
+			<h3>Investments</h3>
+			<div class="bar-container">
+				<div class="bar-progress">
+				</div>
 			</div>
 		</div>
-		<h3>Savings</h3>
-		<div id="savings-bar-container" class="bar-container">
-			<div class="bar-progress">
+		<div id="savings-overview">
+			<h3>Savings</h3>
+			<div class="bar-container">
+				<div class="bar-progress">
+				</div>
 			</div>
 		</div>
-		<h3>Spending Money</h3>
-		<div id="spending-bar-container" class="bar-container">
-			<div class="bar-progress">
+		<div id="spending-money-overview">
+			<h3>Spending Money</h3>
+			<div class="bar-container">
+				<div class="bar-progress">
+				</div>
 			</div>
 		</div>
 	</div>
