--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -127,8 +127,19 @@ nav li a:hover {
 	width: 50%;
 }
 /* CENTER PANE CONTENT */
+.center-pane {
+	text-align: center;
+}
+.center-pane h3 {
+	text-align: left;
+	width: 90%;
+	margin-left: 5%;
+	margin-right: 5%;
+}
 .budget-page .center-pane table {
-	width: 100%;
+	width: 90%;
+	margin-left: 5%;
+	margin-right: 5%;
 	border-collapse: collapse;
 }
 .budget-page .center-pane table td, th {
