--- a/views/budget.ejs
+++ b/views/budget.ejs
@@ -36,65 +36,24 @@
 	</div>
 
 	<!-- CENTER PANE ======================================================== -->
+	<!-- Each table is populated via JS -->
 	<div class="center-pane">
 		<h2>Budget</h2>
-		<!-- Each table is populated via JS -->
 
 		<!-- FIXED COST ITEMS-->
 		<h3>Fixed Costs</h3>
-		<table id="fixed-cost-items">
-			<thead>
-				<tr>
-					<th class="name-th">Name</th>
-					<th class="cost-th">Cost</th>
-					<th class="POB-th">Percent of Budget</th>
-				</tr>
-			</thead>
-			<tbody>
-			</tbody>
-		</table>
+		<table id="fixed-cost-items"></table>
 
 		<!-- INVESTMENT ITEMS-->
-		<h3>Investments</h3>
-		<table id="investment-items">
-			<thead>
-				<tr>
-					<th class="name-th">Name</th>
-					<th class="cost-th">Cost</th>
-					<th class="POB-th">Percent of Budget</th>
-				</tr>
-			</thead>
-			<tbody>
-			</tbody>
-		</table>
+		<h3>Investments</h3></table>
 
 	<!-- SAVINGS ITEMS -->
 		<h3>Savings</h3>
-		<table id="savings-items">
-			<thead>
-				<tr>
-					<th class="name-th">Name</th>
-					<th class="cost-th">Cost</th>
-					<th class="POB-th">Percent of Budget</th>
-				</tr>
-			</thead>
-			<tbody>
-			</tbody>
-		</table>
+		<table id="savings-items"></table>
 
 		<!-- SPEDING MONEY ITEMS -->
 		<h3>Spending Money</h3>
-		<table id="spending-money-items">
-			<thead>
-				<tr>
-					<th class="name-th">Name</th>
-					<th class="cost-th">Cost</th>
-					<th class="POB-th">Percent of Budget</th>
-				</tr>
-			</thead>
-			<tbody>
-			</tbody>
-		</table>
+		<table id="spending-money-items"></table>
 
 	</div>
 	<div class="right-pane">
