Fix 'fixed costs progress bar' and investments table.

--- a/views/budget.ejs
+++ b/views/budget.ejs
@@ -46,8 +46,9 @@
 
 		<!-- INVESTMENT ITEMS-->
 		<h3>Investments</h3></table>
+		<table id="investment-items"></table>
 
-	<!-- SAVINGS ITEMS -->
+		<!-- SAVINGS ITEMS -->
 		<h3>Savings</h3>
 		<table id="savings-items"></table>
 
